--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "Home": "/",
   "name": "tonieta",
   "version": "0.1.0",
   "private": true,
@@ -20,7 +21,6 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "bs-stepper": "^1.7.0",
-    "firebase": "^9.15.0",
     "framer-motion": "^7.6.5",
     "mdb-react-ui-kit": "^5.0.0",
     "mdbootstrap": "^4.20.0",
