--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
+    "styled-icons": "^10.46.0",
     "tw-elements": "^1.0.0-alpha13",
     "web-vitals": "^2.1.4"
   },
