--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.2.2",
     "bs-stepper": "^1.7.0",
     "framer-motion": "^7.6.5",
+    "install": "^0.13.0",
     "mdb-react-ui-kit": "^5.0.0",
     "mdbootstrap": "^4.20.0",
     "popper.js": "^1.16.1",
@@ -33,7 +34,7 @@
     "react-icons": "^4.6.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.8",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
